[package]
name = "lib_rusty_torrent"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_rusty_torrent"
crate-type = ["lib"]

[dependencies]
tokio = { workspace = true }
serde = { version = "1.0.183", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
sha1 = "0.10.5"
dns-lookup = "2.0.2"
regex = "1.9.4"
reqwest = "0.11.20"